--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -78,11 +78,13 @@
                     <a class="page-link" href="javascript:void(0)"
                         (click)="advancedSearchBooks(searchBook,currentIndex-18)">Previous</a>
                 </li>
-                <li *ngFor="let in of counter(pagination) ;let i = index;" class="page-item"><a class="page-link active"
-                        href="javascript:void(0)"
-                        [ngStyle]="(currentIndex / 18 === i) && { 'background': '#007bff','color':'white'}"
-                        (click)="advancedSearchBooks(searchBook,i*18);setCurrentIndex(i*18);">{{i+1}}</a>
-                </li>
+                <ng-container *ngFor="let number of array;">
+                    <li *ngIf="!(number * 18 >= numberItems)" class="page-item"><a class="page-link active"
+                            href="javascript:void(0)"
+                            [ngStyle]="(currentIndex / 18 === number) && { 'background': '#007bff','color':'white'}"
+                            (click)="advancedSearchBooks(searchBook,number*18);setCurrentIndex(number*18);">{{number+1}}</a>
+                    </li>
+                </ng-container>
                 <li class="page-item" [ngClass]="{'disabled': currentIndex + 18 >= numberItems}">
                     <a class="page-link" href="javascript:void(0)"
                         (click)="advancedSearchBooks(searchBook,currentIndex+18)">Next</a>
